--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "apexcharts": "^4.1.0",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "react": "^18.3.1",
